exports[`invalid(1): {\n\t\t\t\"types\": \"./index.d.ts\",\n\t\t\t\"exports\": {\n\t\t\t\t\"import\": \"./index.js\",\n\t\t\t\t\"require\": \"./index.cjs\"\n\t\t\t}\n\t\t} 1`] = `

[Input]
  1 | {
  2 | 			"types": "./index.d.ts",
  3 | 			"exports": {
  4 | 				"import": "./index.js",
  5 | 				"require": "./index.cjs"
  6 | 			}
  7 | 		}

`;

exports[`invalid(1): {\n\t\t\t\"types\": \"./index.d.ts\",\n\t\t\t\"exports\": {\n\t\t\t\t\"import\": \"./index.js\",\n\t\t\t\t\"require\": \"./index.cjs\"\n\t\t\t}\n\t\t} 2`] = `

Message:
  1 | {
> 2 | 			"types": "./index.d.ts",
    | 			^^^^^^^ \`types\` is not exposed through \`exports\`, so it will not be found by TypeScript \`node16\`/\`nodenext\` resolution. Add a \`types\` condition inside \`exports\`.
  3 | 			"exports": {
  4 | 				"import": "./index.js",
  5 | 				"require": "./index.cjs"
  6 | 			}
  7 | 		}

`;

exports[`invalid(2): {\n\t\t\t\"typings\": \"./index.d.ts\",\n\t\t\t\"exports\": \"./index.js\"\n\t\t} 1`] = `

[Input]
  1 | {
  2 | 			"typings": "./index.d.ts",
  3 | 			"exports": "./index.js"
  4 | 		}

`;

exports[`invalid(2): {\n\t\t\t\"typings\": \"./index.d.ts\",\n\t\t\t\"exports\": \"./index.js\"\n\t\t} 2`] = `

Message:
  1 | {
> 2 | 			"typings": "./index.d.ts",
    | 			^^^^^^^^^ \`typings\` is not exposed through \`exports\`, so it will not be found by TypeScript \`node16\`/\`nodenext\` resolution. Add a \`types\` condition inside \`exports\`.
  3 | 			"exports": "./index.js"
  4 | 		}

`;

exports[`invalid(3): {\n\t\t\t\"types\": \"./index.d.ts\",\n\t\t\t\"exports\": {\n\t\t\t\t\".\": \"./index.js\"\n\t\t\t}\n\t\t} 1`] = `

[Input]
  1 | {
  2 | 			"types": "./index.d.ts",
  3 | 			"exports": {
  4 | 				".": "./index.js"
  5 | 			}
  6 | 		}

`;

exports[`invalid(3): {\n\t\t\t\"types\": \"./index.d.ts\",\n\t\t\t\"exports\": {\n\t\t\t\t\".\": \"./index.js\"\n\t\t\t}\n\t\t} 2`] = `

Message:
  1 | {
> 2 | 			"types": "./index.d.ts",
    | 			^^^^^^^ \`types\` is not exposed through \`exports\`, so it will not be found by TypeScript \`node16\`/\`nodenext\` resolution. Add a \`types\` condition inside \`exports\`.
  3 | 			"exports": {
  4 | 				".": "./index.js"
  5 | 			}
  6 | 		}

`;

exports[`invalid(4): {\n\t\t\t\"types\": 1,\n\t\t\t\"typings\": \"./index.d.ts\",\n\t\t\t\"exports\": {\n\t\t\t\t\"import\": \"./index.js\"\n\t\t\t}\n\t\t} 1`] = `

[Input]
  1 | {
  2 | 			"types": 1,
  3 | 			"typings": "./index.d.ts",
  4 | 			"exports": {
  5 | 				"import": "./index.js"
  6 | 			}
  7 | 		}

`;

exports[`invalid(4): {\n\t\t\t\"types\": 1,\n\t\t\t\"typings\": \"./index.d.ts\",\n\t\t\t\"exports\": {\n\t\t\t\t\"import\": \"./index.js\"\n\t\t\t}\n\t\t} 2`] = `

Message:
  1 | {
  2 | 			"types": 1,
> 3 | 			"typings": "./index.d.ts",
    | 			^^^^^^^^^ \`typings\` is not exposed through \`exports\`, so it will not be found by TypeScript \`node16\`/\`nodenext\` resolution. Add a \`types\` condition inside \`exports\`.
  4 | 			"exports": {
  5 | 				"import": "./index.js"
  6 | 			}
  7 | 		}

`;
